--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -1,4 +1,5 @@
 import { Meta } from '@storybook/blocks'
+import * as IconModule from '../icons'
 import Code from './assets/code-brackets.svg'
 import Colors from './assets/colors.svg'
 import Comments from './assets/comments.svg'
@@ -126,7 +127,6 @@ View their code in the `stories` directory to learn how they work.
 We recommend building UIs with a [**component-driven**](https://componentdriven.org) process starting with atomic components and ending with pages.
 
 <div className="subheading">Configure</div>
-
 <div className="link-list">
 	<a
 		className="link-item"
